fix(sidebar): Ajustando overflow da lista da sidebar

--- a/src/scss/organisms/sidebar/_list.scss
+++ b/src/scss/organisms/sidebar/_list.scss
@@ -8,4 +8,6 @@
   transform: translateX(-100%);
   animation: slideX 0.1s forwards;
   background-color: $color-primary-shade;
+  overflow: auto;
+  height: 100%;
 }
